--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
                 <p>
                     Soy Juvelly Bustamante, una joven apasionada por aprender acerca del análisis 
                     y el desarrollo de software. En este portafolio encontrarás información sobre mis proyectos, 
-                    mis temas de interés y maneras de contactarme.
+                    mis temas de interés y cómo contactarme. Soy una mujer responsable y comprometida con mis 
+                    objetivos, siempre buscando superarme y aprender cosas nuevas en el campo de la tecnología. 
+                    Me gustaría desempeñarme en el área de la ciberseguridad, ya que es un campo en constante 
+                    crecimiento y evolución, y me apasiona la idea de proteger la información y los sistemas 
+                    de posibles amenazas.
                 </p>
             </div>
 
@@ -102,7 +106,7 @@
         </section>
 
         <!-- TEMAS DE INTERÉS -->
-        <section id="temas_de_interes">
+        <section  class="Temas" id="temas_de_interes">
             <h5>Temas de interés</h5>
 
             <div class="barra">
@@ -129,18 +133,11 @@
                 <span class="porcentaje">64%</span>
             </div>
         </section>
-
-        <!-- ============================= -->
-        <!--          CONTACTO            -->
-        <!-- ============================= -->
-
-        <section class="contacto" id="contacto">
-            <h6>Contáctame</h6>
-
+        
             <div class="contacto-contenedor">
 
                 <!-- FORMULARIO -->
-                <form action="#" method="POST" class="formulario-contacto">
+                <form action="#" method="POST">
 
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -153,8 +150,14 @@
 
                     <button type="submit">Enviar</button>
                 </form>
+            </div>
+    </main>
 
-                <!-- ICONOS -->
+    <footer>
+        <section class="contacto" id="contacto">
+            <h6>Contáctame</h6>
+        </section>
+                 <!-- ICONOS -->
                 <div class="social-container">
 
                     <a href="mailto:bustamantejuve2409@gmail.com">
@@ -174,20 +177,14 @@
                     </a>
 
                 </div>
-
-            </div>
-
-        </section>
-
-    </main>
-
-    <footer>
+        
         <p>© 2025 Juvelly Bustamante Rave — Todos los derechos reservados</p>
     </footer>
 
 </body>
 
 </html>
+
 
 
 
