Finalizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
     <!-- NAV -->
     <header>
+
+          <!-- TÍTULO -->
+    <section class="titulo" id="Nombre">
+        <h1>Juvelly Bustamante Rave</h1>
+    </section>
+
+
         <div class="menu-container">
 
             <!-- Botón Hamburguesa -->
@@ -35,10 +42,7 @@
         };
     </script>
 
-    <!-- TÍTULO -->
-    <section class="titulo" id="Nombre">
-        <h1>Juvelly Bustamante Rave</h1>
-    </section>
+  
 
     <main>
 
@@ -67,6 +71,7 @@
         <!-- PROYECTOS -->
         <section class="proyectos-futuros" id="proyectos">
             <h3>Mis Proyectos</h3>
+        </section>
 
             <div class="contenedor-proyectos">
 
@@ -103,7 +108,7 @@
                 </div>
 
             </div>
-        </section>
+
 
         <!-- TEMAS DE INTERÉS -->
         <section  class="Temas" id="temas_de_interes">
@@ -137,7 +142,7 @@
             <div class="contacto-contenedor">
 
                 <!-- FORMULARIO -->
-                <form action="#" method="POST">
+                <form action="https://formspree.io/f/mzznzokq" method="POST">
 
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -154,26 +159,21 @@
     </main>
 
     <footer>
-        <section class="contacto" id="contacto">
+        <section class="contactos" id="contacto">
             <h6>Contáctame</h6>
         </section>
                  <!-- ICONOS -->
                 <div class="social-container">
-
-                    <a href="mailto:bustamantejuve2409@gmail.com">
-                        <img src="img/gmail-icon.png" alt="Gmail">
-                    </a>
-
                     <a href="https://wa.me/573243095696" target="_blank">
-                        <img src="img/WhatsApp_icon.png" alt="WhatsApp">
+                    <img src="img/icons8-whatsapp-logo-48.png" alt="WhatsApp">
                     </a>
 
-                    <a href="https://www.instagram.com/tuusuario" target="_blank">
-                        <img src="img/instagram-icon.png" alt="Instagram">
+                     <a href="mailto:bustamantejuve2409@gmail.com">
+                        <img src="img/icons8-gmail-logo-48.png" alt="Gmail">
                     </a>
 
                     <a href="https://www.facebook.com/bustamante.j.ve.r" target="_blank">
-                        <img src="img/FACEBOOK.png" alt="Facebook">
+                        <img src="img/icons8-facebook-48 (2).png" alt="Facebook">
                     </a>
 
                 </div>
